--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "author": "Andrew Paterson",
   "license": "MIT",
   "dependencies": {
+    "chalk": "^4.1.1",
     "image-size": "^0.9.3",
     "is-image": "^3.0.0",
+    "lodash.uniqby": "^4.7.0",
     "mkdirp": "^1.0.4",
     "request": "^2.88.2",
     "sharp": "^0.27.0"
