--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "responsive-image-directory",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "Given a `src` directory of images, the script creates a clone of the directory and its contained images at the provided `dest` path, but with multiple sizes of each image, based on the sizes specified in the settings.",
   "main": "index.js",
   "scripts": {
@@ -15,13 +15,13 @@
     "lodash.uniqby": "^4.7.0",
     "mkdirp": "^1.0.4",
     "request": "^2.88.2",
-    "sharp": "^0.27.0",
-    "tag-and-release": "^1.0.14"
+    "sharp": "^0.27.0"
   },
   "directories": {
     "test": "test"
   },
   "devDependencies": {
+    "tag-and-release": "^1.0.14"
   },
   "repository": {
     "type": "git",
